02/27/2004 Bob Rossi <bob@brasko.net>

    * configure.in (AC_OUTPUT): Add cgdb/lib, cgdb/lib/kui and
	cgdb/lib/kui/src

01/09/2004 Bob Rossi <bob@brasko.net>

   * NEWS: Updated to say CGDB now compiles on the HURD 

01/08/2004 Bob Rossi <bob@brasko.net>

   * Makefile.in: regenerated with documented autotools version
	* aclocal.m4: ditto
	* configure: ditto
	* various/Makefile.in: ditto

01/08/2004 Bob Rossi <bob@brasko.net>

    * Merged branch: Ronald's cygwin_package_0_4_0 branch

version 0.4.0-1 cygwin release

12/12/2003 Ronald Landheer-Cieslak <ronald@landheer.com>

    * Makefile.in: regenerated
    * aclocal.m4: ditto
    * configure: ditto
    * various/Makefile.in: ditto

11/16/2003 Bob Rossi <bob@brasko.net>

   	* NEWS: Update for tab completion bug fix in cgdb-0.4.0

10/28/2003 Bob Rossi <bob@brasko.net>

    * release-todo.txt: Update order of things

version 0.4.0 (10/28/2003):

10/28/2003 Bob Rossi <bob@brasko.net>

    * NEWS: Add new release date and version.

10/15/2003 Mike Mueller <mmueller@cs.uri.edu>

    * NEWS: Adding :set wrapscan (ws) option.

10/10/2003 Bob Rossi <bob@brasko.net>

    * Adding doc directory.

10/09/2003 Mike Mueller <mmueller@cs.uri.edu>

    * NEWS: Fixed 'next search' bug where it jumps to the top of the buffer
            when there was no previous search expression.  Also made searches
            wrap around the top/bottom of file.  Hope this is what everyone
            else wants, because I sure do.

09/28/2003 Bob Rossi <bob@brasko.net>

    * NEWS: TGDB now returns TGDB_ABSOLUTE_SOURCE_DENIED when file is not
	available. This is a bug fix.

09/24/2003 Bob Rossi <bob@brasko.net>

    * NEWS: TGDB no checks breakpoints on startup. 

09/23/2003 Bob Rossi <bob@brasko.net>

    * NEWS: Fixed searching bug for CGDB.

09/12/2003 Bob Rossi <bob@brasko.net>

    * NEWS: Fixed crash for when TGDB would try to parse watchpoints.

09/10/2003 Bob Rossi <bob@brasko.net>

    * NEWS: Add new feature. showtgdbcommands.