@@ -1,3 +1,8 @@
+03/02/2004 Bob Rossi <bob@brasko.net>
+
+    * Doxyfile: Make the doxygen output QUIET
+	* gdbmi/src/gdbmi_tgdb.c: Comply to doxygen
+
 01/30/2004 Bob Rossi <bob@brasko.net>
 
    * TODO: Updated list of things to do
